<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/info_main_header"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_creator"
        android:textSize="15sp"

        android:layout_margin="5dp"/>
    <TextView
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_app_desc"
        android:textSize="15sp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_licenses_header"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_json_license"
        android:linksClickable="true"
        android:autoLink="web"
        android:layout_margin="5dp"/>


</LinearLayout>