<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label" />
    <EditText
        android:id="@+id/ip_addr_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines= "1"
        android:inputType="text"
        android:maxLength="25"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_label"/>
    <EditText

        android:id="@+id/port_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines= "1"
        android:maxLength="5"
        android:inputType="text"
        />

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/name_label"/>
    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines= "1"
        android:maxLength="10"
        android:inputType="text"
        />

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="20"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_text"/>


</LinearLayout>